added GC combobox for gui app